# Dal-Student-Marketplace

./: .gitignore  .gitlab-ci.yml  README.md  sonar-project.properties
Accounts/: .env.example  pyproject.toml  pytest-report-accounts.xml  requirements.txt
Accounts/accounts/: __init__.py  __main__.py  config.py  emailsend.py  generateOTP.py  passwordGenerator.py
Accounts/accounts/.scannerwork/: report-task.txt
Accounts/accounts/dto/: credentials.py  user_creation.py
Accounts/accounts/models/: __init__.py  token.py  user.py  user_role.py
Accounts/accounts/routes/: __init__.py  auth.py  error.py  health.py  users.py
Accounts/tests/: config_test.py  emailsend_test.py  generateOTP_test.py  passwordGenerator_test.py
Accounts/tests/dto/: credentials_test.py  user_creation_test.py
Accounts/tests/routes/: auth_test.py  error_test.py  health_test.py  users_test.py
Documents/: Code Smells.xlsx  Contribution statement.xlsx
Frontend/: package-lock.json  package.json  tailwind.config.js
Frontend/src/: App.js  (+2 more)
Products/: .env.example  pyproject.toml  requirements.txt
Products/products/: __init__.py  __main__.py  config.py
Products/products/.scannerwork/: report-task.txt
Products/products/dto/: product_change.py  product_creation.py
Products/products/models/: __init__.py  product.py  product_category.py  product_images.py  product_status.py
Products/products/routes/: __init__.py  product.py
Products/tests/: conf_test.py
Products/tests/dto/: product_change_test.py  product_creation_test.py
Products/tests/routes/: product_test.py
db-scripts/: db.sql
(+17 files in other folders)
